--- a/add-ons/certainly_popups/certainly-popups/certainly-popups.css
+++ b/add-ons/certainly_popups/certainly-popups/certainly-popups.css
@@ -14,6 +14,9 @@
   margin: 0;
   padding: 0!important;
   transition: .25s ease all;
+  transform: scale(0);
+  transform-origin: bottom right;
+  /*transition: .25s ease transform 2s;*/
 }
 #certainly-popups >.certainly-message >.certainly-bubble {
   background-color: #fdfeff;
@@ -22,12 +25,13 @@
   color: #333;
   font-family: 'GT-Walsheim', Arial, Helvetica, sans-serif;
   font-family: inherit;
-  font-weight: 600;
+  /*font-weight: 600;*/
   margin-top: 10px;
   text-align: right;
   cursor: pointer;
   transition: .15s ease all;
   box-shadow: 2px 2px 6px 0px hsl(0deg 0% 0% / 10%);
+
 }
 #certainly-popups >.certainly-message>.certainly-bubble:hover {
   background-color: #4364fa;
